--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1 {
     text-align: center;
     margin: 0 0 20px 0;
 }
-
+  
 p {
     text-align: center;
     font-size: 18px;
@@ -23,7 +23,9 @@ p {
     text-indent: 30px;
 }
 
-#converter-form {
+#converter-form,
+#stats-form,
+#stats {
     max-width: 500px;
     margin: 0 auto;
     text-align: center;
@@ -38,7 +40,7 @@ p {
     font-size: 1.2em;
 }
 
-#converter-form label {
+#converter-form label, #stats-form label {
     display: block;
     margin-bottom: 10px;
     font-weight: bold;
