--- a/style.css
+++ b/style.css
@@ -240,3 +240,13 @@ form label[for="minReps"] {
 #download-link:hover {
     background-color: #45a049;
 }
+
+#slider-range {
+    width: 20%;
+    border-radius: 10px;
+    margin: 20px auto;
+}
+
+#slider-label {
+    margin: 20px auto;
+}
