--- a/style.css
+++ b/style.css
@@ -262,7 +262,7 @@ form label[for="minReps"] {
 .tooltip:hover .tooltiptext {
     visibility: visible;
     opacity: 1;
-    font-size: 10px;
+    font-size: 12px;
 }
 
 .fileInputContainer {
@@ -294,7 +294,7 @@ form label[for="minReps"] {
     border-radius: 20px;
     border: 1px solid #ccc;
     font-size: 16px;
-    margin: 0 auto;
+    /* margin: 0 auto; */
 }
 
 #textInput::placeholder {
