--- a/style.css
+++ b/style.css
@@ -269,14 +269,13 @@ form label[for="minReps"] {
     display: inline-block;
     margin: 20px auto;
     padding: 10px 20px;
-    background-color: #4CAF50;
+    background-color: #333;
     color: white;
     border: none;
     cursor: pointer;
     border-radius: 5px;
     text-align: center;
-    width: 10%;
-    font-size: 13px;
+    width: 30%;
 }
 
 .fileInputContainer:hover {
