--- a/style.css
+++ b/style.css
@@ -409,11 +409,13 @@ input:checked+.toggle:after {
 
 #first-word {
     color: #333;
-    margin-left: 25%;
+    margin-left: 20%;
+    font-size: 30px;
 }
 
 #other-words {
     color: #999;
+    margin-left: 1%
 }
 
 #chord {
