--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body {
     max-width: 1200px;
     margin: 0 auto;
+    display: flex;
     text-align: center;
     font-family: "Georgia", serif;
 }
@@ -146,12 +147,14 @@ a:hover {
 
 header {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    flex-direction: column; /* Changed from horizontal to vertical layout */
+    align-items: flex-start; /* Aligns items to the left */
     background-color: #333;
     color: white;
     padding: 20px;
     text-align: left;
+    height: 100vh;
+    width: 200px; /* Example fixed width */
 }
 
 header h1 {
@@ -161,13 +164,14 @@ header h1 {
 
 header nav ul {
     display: flex;
+    flex-direction: column; /* Stack list items vertically */
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
 header nav ul li {
-    margin: 0 10px;
+    margin: 0 0 10px 0; /* Add margin to the bottom instead of the right */
 }
 
 header nav ul li a {
@@ -179,6 +183,17 @@ header nav ul li a:hover {
     color: lightgrey;
 }
 
+.main-content {
+    min-width: 75%;
+}
+
+.main-content > h1 {
+    background-color: #333;
+    color: white;
+    padding: 10px 10px;
+}
+
+
 li {
     text-align: left;
 }
@@ -186,7 +201,6 @@ li {
 form label[for="minReps"] {
     display: inline-block;
     width: 600px;
-    /* Adjust as needed */
     text-align: right;
     padding-right: 10px;
 }
