--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ form textarea,
 form button {
     display: block;
     width: 100%;
-    margin: 0 0 20px 0;
+    /* margin: 0 0 20px 0; */
 }
 
 form label {
@@ -105,7 +105,7 @@ form textarea {
     border: 1px solid #ccc;
 }
 
-form button {
+button {
     font-size: 18px;
     font-weight: bold;
     color: #fff;
@@ -185,12 +185,16 @@ header nav ul li a:hover {
 
 .main-content {
     min-width: 75%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .main-content > h1 {
     background-color: #333;
     color: white;
     padding: 10px 10px;
+    border-radius: 0px 0px 20px 20px;
 }
 
 
@@ -244,7 +248,7 @@ form label[for="minReps"] {
 #slider-range,
 #slider-range-index,
 #slider-range-keys {
-    width: 20%;
+    /* width: 20%; */
     border-radius: 5px;
     margin: 20px auto;
 }
@@ -284,7 +288,6 @@ form label[for="minReps"] {
 
 .fileInputContainer {
     display: inline-block;
-    margin: 20px auto;
     padding: 10px 20px;
     background-color: #333;
     color: white;
@@ -292,7 +295,6 @@ form label[for="minReps"] {
     cursor: pointer;
     border-radius: 5px;
     text-align: center;
-    width: 30%;
 }
 
 .fileInputContainer:hover {
@@ -305,7 +307,7 @@ form label[for="minReps"] {
 
 #textInput {
     display: block;
-    width: 20%;
+    /* width: 20%; */
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
@@ -324,7 +326,7 @@ form label[for="minReps"] {
     display: inline-block;
     font-weight: normal;
     font-size: 16px;
-    width: 20%;
+    width: 75%;
     margin-left: 1%;
     text-align: left;
 }
@@ -397,8 +399,8 @@ input:checked+.toggle:after {
 }
 
 #textInput {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 16px;}
+    font-size: 16px;
+}
 
 #line {
     border-top: 2px solid black;
@@ -408,16 +410,10 @@ input:checked+.toggle:after {
 }
 
 #copy-chords {
-    width: 33.5%;
     margin: 0 auto;
-    font-family: "Georgia", serif;
     margin-bottom: 3%;
     margin-right: 34.5%;
     margin-top: 3%;
-}
-
-#start-practice-button {
-    font-family: "Georgia", serif;
 }
 
 #first-word {
@@ -439,15 +435,44 @@ input:checked+.toggle:after {
     margin-top: 3%;
 }
 
+#practice-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#controls {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+    align-items: center;
+}
+
+#controls button {
+    margin: 5px;
+}
+
+.main-content details {
+    width: 75%;
+    text-align: left;
+}
+
+summary {
+    text-align: center;
+}
+
 #wrapper {
     display: flex;
     flex-direction: column;
     height: 100vh;
+    width: 100%;
+    align-items: center;
 }
 
 #wrapper #visualization {
     flex: 1 1;
     min-height: 0px;
+    min-width: 100%;
 }
 
 #visualization {
